# VCP-Display

./: README.md
Desktop/: .gitignore
Desktop/.devcontainer/: Dockerfile  Dockerfile.base  devcontainer.json  docker-compose.yaml
Desktop/Comm/: CMakeLists.txt
Desktop/Comm/src/: main.cpp
Desktop/Display/: CMakeLists.txt
Desktop/Display/include/: communication.hpp  display.hpp
Desktop/Display/src/: communication.cpp  display.cpp  main.cpp
Desktop/Test/PyListen/: pylisten.py
Desktop/Test/include/: display.hpp
Desktop/Test/src/: display.cpp  main.cpp
Desktop/VCP_Display/include/: communication.hpp  display.hpp
Desktop/VCP_Display/src/: communication.cpp  display.cpp  main.cpp
Embedded/: .gitignore  .mxproject  STM32H755-UART-VCP.ioc
Embedded/.devcontainer/: Dockerfile  Dockerfile.base  devcontainer.json  docker-compose.yaml
Embedded/CM4/Src/: main.c
Embedded/CM7/Inc/: stm32h7xx_it.h  usart.h
Embedded/CM7/Src/: gpio.c  main.c  stm32h7xx_it.c  usart.c
Embedded/Drivers/LVGL/: lv_conf.h
Embedded/Makefile/CM4/: Makefile  flash_cm4.sh
Embedded/Makefile/CM7/: Makefile  flash_cm7.sh  stm32h755xx_flash_CM7.ld
Embedded/PyListen/: uart_parse.py  uart_test_stats.py
